@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2001, 2002  Free Software Foundation, Inc.
+# Copyright (C) 2001, 2002, 2009  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -39,9 +39,9 @@ noinst_PROGRAMS = fxmisc
 fxmisc_SOURCES    = fx64.c fximg.c fxos.c linutil.c
 END
 
-$ACLOCAL || exit 1
-$AUTOMAKE || exit 1
-$AUTOCONF || exit 1
-./configure || exit 1
+$ACLOCAL || Exit 1
+$AUTOMAKE || Exit 1
+$AUTOCONF || Exit 1
+./configure || Exit $?
 
 test -f .deps/fx64.Po
