@@ -1,3 +1,12 @@
+2009-03-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	testsuite: SKIP compile tests if configure found no compiler.
+	* tests/depend6.test: configure will exit 77 if AC_PROG_CC found
+	no working compiler.  Allow the test to be SKIPped in that case.
+	* tests/postproc.test: Likewise.
+	* tests/pr243.test: Likewise.
+	* tests/pr266.test: Likewise.
+
 2009-03-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* doc/automake.texi (maintainer-mode): Fix logic in
